fixed some issues
fixed some issues about footer (in next gen - b_nav_bar)

--- a/index.html
+++ b/index.html
@@ -175,19 +175,19 @@
       <footer class="mastfoot mt-auto" id="foot">
         <div class="footer-nav">
           <div class="div-in-footer">
-            <img src="png/Home.png" class="img-in-footer"></a>
+            <img src="png/home.png" class="img-in-footer"></a>
             <p>
               Лента
             </p>
           </div>
           <div class="div-in-footer">
-            <img src="png/Star.png" class="img-in-footer"></a>
+            <img src="png/star.png" class="img-in-footer"></a>
             <p>
               Избранное
             </p>
           </div>
           <div class="div-in-footer">
-            <img src="png/Menu.png" class="img-in-footer"></a>
+            <img src="png/menu.png" class="img-in-footer"></a>
             <p>
               Меню
             </p>
