--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </header>
 
-      <main role="main" class="inner cover" style="" id="firstTab">
+      <main role="main" class="inner cover" style="width: 360px;" id="firstTab">
 
         <div class="holder" id="div-link" onclick="location.href='https://docs.google.com/spreadsheets/d/1HwJj3oLOL96z2aH2KaI5yVyBpazZI49zwWDKwrIwGVA/edit#gid=50299860';">
           <img src="png/pencil.png" width="30px" height="30px" class="img-in-card"></a>
@@ -40,6 +40,8 @@
           </div>
         </div>
 
+        <div class="divider"></div>
+
         <div class="holder">
           <img src="png/map-marker.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
@@ -49,6 +51,8 @@
             </div>
           </div>
         </div>
+
+        <div class="divider"></div>
 
         <div class="holder">
           <img src="png/book-multiple.png" width="30px" height="30px" class="img-in-card"></a>
@@ -60,6 +64,8 @@
           </div>
         </div>
 
+        <div class="divider"></div>
+
         <div class="holder">
           <img src="png/forum.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
@@ -69,6 +75,8 @@
             </div>
           </div>
         </div>
+
+        <div class="divider"></div>
 
         <div class="holder">
           <img src="png/table.png" width="30px" height="30px" class="img-in-card"></a>
@@ -80,6 +88,8 @@
           </div>
         </div>
 
+        <div class="divider"></div>
+
         <div class="holder">
           <img src="png/flag.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
@@ -89,6 +99,8 @@
             </div>
           </div>
         </div>
+
+        <div class="divider"></div>
 
         <div class="holder">
           <img src="png/chart-line.png" width="30px" height="30px" class="img-in-card"></a>
@@ -100,6 +112,8 @@
           </div>
         </div>
 
+        <div class="divider"></div>
+
         <div class="holder">
           <img src="png/phone.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
@@ -109,6 +123,8 @@
             </div>
           </div>
         </div>
+
+        <div class="divider"></div>
 
         <div class="holder">
           <img src="png/clock.png" width="30px" height="30px" class="img-in-card"></a>
