--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
         <div class="inner">
           <nav class="nav justify-content-center">
             <a class="nav-link active" href="#" onclick="goToFirstTab()">Самокат <img src="png/Samokat_logo.png" width="20px" height="20px"></a>
+            <div class="divider-vertical nav nav-link"></div>
             <a class="nav-link" href="#" onclick="goToSecTab()">Потом <img src="png/adidas.png" width="27px" height="24.5px"></a>
           </nav>
         </div>
       </header>
 
-      <main role="main" class="inner cover" style="width: 360px;" id="firstTab">
+      <main role="main" class="inner cover" style="margin-top: 2em; width: 360px;" id="firstTab">
 
-        <div class="holder" id="div-link" onclick="location.href='https://docs.google.com/spreadsheets/d/1HwJj3oLOL96z2aH2KaI5yVyBpazZI49zwWDKwrIwGVA/edit#gid=50299860';">
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://docs.google.com/spreadsheets/d/1HwJj3oLOL96z2aH2KaI5yVyBpazZI49zwWDKwrIwGVA/edit#gid=50299860';">
           <img src="png/pencil.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
             <div class="defaultTextBox">
@@ -42,10 +43,10 @@
 
         <div class="divider"></div>
 
-        <div class="holder">
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://sam-client-web.samokat.ru/map';">
           <img src="png/map-marker.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
-            <div class="defaultTextBox" id="div-link" onclick="location.href='https://sam-client-web.samokat.ru/map';">
+            <div class="defaultTextBox">
               <p class="mainTextBold">SAM</p>
               <p class="subText">Карта</p>
             </div>
@@ -54,10 +55,10 @@
 
         <div class="divider"></div>
 
-        <div class="holder">
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://space.samokat.ru/pages/viewpage.action?pageId=836960295';">
           <img src="png/book-multiple.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
-            <div class="defaultTextBox" id="div-link" onclick="location.href='https://space.samokat.ru/pages/viewpage.action?pageId=836960295';">
+            <div class="defaultTextBox">
               <p class="mainTextBold">Confluence</p>
               <p class="subText">Регламент - база знаний</p>
             </div>
@@ -66,10 +67,10 @@
 
         <div class="divider"></div>
 
-        <div class="holder">
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://portal-ru.infobip.com/';">
           <img src="png/forum.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
-            <div class="defaultTextBox" id="div-link" onclick="location.href='https://portal-ru.infobip.com/';">
+            <div class="defaultTextBox">
               <p class="mainTextBold">InfoBip</p>
               <p class="subText">Чаты (work это работа, а волк - ходить)</p>
             </div>
@@ -78,10 +79,10 @@
 
         <div class="divider"></div>
 
-        <div class="holder">
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://opercrm-client-web.samokat.ru/orders?search%5BsearchType%5D=customerPhone&search%5BsearchValue%5D=';">
           <img src="png/table.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
-            <div class="defaultTextBox" id="div-link" onclick="location.href='https://opercrm-client-web.samokat.ru/orders?search%5BsearchType%5D=customerPhone&search%5BsearchValue%5D=';">
+            <div class="defaultTextBox">
               <p class="mainTextBold">CRM</p>
               <p class="subText">БД заказов и клиентов</p>
             </div>
@@ -90,10 +91,10 @@
 
         <div class="divider"></div>
 
-        <div class="holder">
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://project.samokat.ru/servicedesk/customer/portals';">
           <img src="png/flag.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
-            <div class="defaultTextBox" id="div-link" onclick="location.href='https://project.samokat.ru/servicedesk/customer/portals';">
+            <div class="defaultTextBox">
               <p class="mainTextBold">Пространство Самокат</p>
               <p class="subText">Для создания задач</p>
             </div>
@@ -102,10 +103,10 @@
 
         <div class="divider"></div>
 
-        <div class="holder">
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://app.powerbi.com/groups/f38f7023-4af1-456e-a6ec-6e308d398317/reports/171a1ba5-0731-4d3e-b29a-ed15dbb77758/ReportSection';">
           <img src="png/chart-line.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
-            <div class="defaultTextBox" id="div-link" onclick="location.href='https://app.powerbi.com/groups/f38f7023-4af1-456e-a6ec-6e308d398317/reports/171a1ba5-0731-4d3e-b29a-ed15dbb77758/ReportSection';">
+            <div class="defaultTextBox">
               <p class="mainTextBold">Power Bi</p>
               <p class="subText">Показатели, оценки и отчет ЦФЗ</p>
             </div>
@@ -114,10 +115,10 @@
 
         <div class="divider"></div>
 
-        <div class="holder">
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://support.workaround.tech/login';">
           <img src="png/phone.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
-            <div class="defaultTextBox" id="div-link" onclick="location.href='https://support.workaround.tech/login';">
+            <div class="defaultTextBox">
               <p class="mainTextBold">Вебфон</p>
               <p class="subText">Ну типа звонилка лол</p>
             </div>
@@ -126,16 +127,28 @@
 
         <div class="divider"></div>
 
-        <div class="holder">
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://touvre.smkt.pro/timesheet';">
           <img src="png/clock.png" width="30px" height="30px" class="img-in-card"></a>
           <div class="subholder">
-            <div class="defaultTextBox" id="div-link" onclick="location.href='https://touvre.smkt.pro/timesheet';">
+            <div class="defaultTextBox">
               <p class="mainTextBold">ТУВР</p>
               <p class="subText">💵🕑</p>
             </div>
           </div>
         </div>
 
+        <div class="upd-card">
+          <p class="card-title">
+            upd to 2.0/15.09
+          </p>
+          <a class="card-description" target="_blank" href="https://github.com/jessypink/start-page-smkt#start-page-smkt">
+            full changelog
+          </a>
+          <p class="card-description">
+            - some changes for ui/ux stability
+          </p>
+
+        </div>
 
 
     </main>
