--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <main role="main" class="inner cover" style="margin-top: 2em; width: 360px;" id="firstTab">
 
         <div class="holder" id="div-link" target="_blank" onclick="location.href='https://docs.google.com/spreadsheets/d/1HwJj3oLOL96z2aH2KaI5yVyBpazZI49zwWDKwrIwGVA/edit#gid=50299860';">
-          <img src="png/pencil.png" width="30px" height="30px" class="img-in-card"></a>
+          <img src="svgs/shablon.svg" width="30px" height="30px" class="img-in-card"></img>
           <div class="subholder">
             <div class="defaultTextBox">
               <p class="mainTextBold">Шаблоны</p>
@@ -41,10 +41,20 @@
           </div>
         </div>
 
+        <div class="holder" id="div-link" target="_blank" onclick="location.href='https://docs.google.com/document/d/1b7j0oiqvCm7q5LAxPfUG87_dmc9tIBBQ_fx91gmFXRI/edit?usp=drivesdk';">
+          <img src="svgs/shablon.svg" width="30px" height="30px" class="img-in-card"></img>
+          <div class="subholder">
+            <div class="defaultTextBox">
+              <p class="mainTextBold">Шаблоны валерочка</p>
+              <p class="subText">Реализируем, расставляем приоритеты</p>
+            </div>
+          </div>
+        </div>
+
         <div class="divider"></div>
 
         <div class="holder" id="div-link" target="_blank" onclick="location.href='https://sam-client-web.samokat.ru/map';">
-          <img src="png/map-marker.png" width="30px" height="30px" class="img-in-card"></a>
+          <img src="svgs/MAP.svg" width="30px" height="30px" class="img-in-card"></img>
           <div class="subholder">
             <div class="defaultTextBox">
               <p class="mainTextBold">SAM</p>
@@ -56,7 +66,7 @@
         <div class="divider"></div>
 
         <div class="holder" id="div-link" target="_blank" onclick="location.href='https://space.samokat.ru/pages/viewpage.action?pageId=836960295';">
-          <img src="png/book-multiple.png" width="30px" height="30px" class="img-in-card"></a>
+          <img src="svgs/conluence.svg" width="30px" height="30px" class="img-in-card"></img>
           <div class="subholder">
             <div class="defaultTextBox">
               <p class="mainTextBold">Confluence</p>
@@ -68,7 +78,7 @@
         <div class="divider"></div>
 
         <div class="holder" id="div-link" target="_blank" onclick="location.href='https://portal-ru.infobip.com/';">
-          <img src="png/forum.png" width="30px" height="30px" class="img-in-card"></a>
+          <img src="svgs/infobip.svg" width="30px" height="30px" class="img-in-card"></img>
           <div class="subholder">
             <div class="defaultTextBox">
               <p class="mainTextBold">InfoBip</p>
@@ -80,7 +90,7 @@
         <div class="divider"></div>
 
         <div class="holder" id="div-link" target="_blank" onclick="location.href='https://opercrm-client-web.samokat.ru/orders?search%5BsearchType%5D=customerPhone&search%5BsearchValue%5D=';">
-          <img src="png/table.png" width="30px" height="30px" class="img-in-card"></a>
+          <img src="svgs/CRM.svg" width="30px" height="30px" class="img-in-card"></img>
           <div class="subholder">
             <div class="defaultTextBox">
               <p class="mainTextBold">CRM</p>
@@ -92,7 +102,7 @@
         <div class="divider"></div>
 
         <div class="holder" id="div-link" target="_blank" onclick="location.href='https://project.samokat.ru/servicedesk/customer/portals';">
-          <img src="png/flag.png" width="30px" height="30px" class="img-in-card"></a>
+          <img src="svgs/prostranstvoSamokat.svg" width="30px" height="30px" class="img-in-card"></img>
           <div class="subholder">
             <div class="defaultTextBox">
               <p class="mainTextBold">Пространство Самокат</p>
@@ -104,7 +114,7 @@
         <div class="divider"></div>
 
         <div class="holder" id="div-link" target="_blank" onclick="location.href='https://app.powerbi.com/groups/f38f7023-4af1-456e-a6ec-6e308d398317/reports/171a1ba5-0731-4d3e-b29a-ed15dbb77758/ReportSection';">
-          <img src="png/chart-line.png" width="30px" height="30px" class="img-in-card"></a>
+          <img src="svgs/powerbi.svg" width="30px" height="30px" class="img-in-card"></img>
           <div class="subholder">
             <div class="defaultTextBox">
               <p class="mainTextBold">Power Bi</p>
@@ -116,7 +126,7 @@
         <div class="divider"></div>
 
         <div class="holder" id="div-link" target="_blank" onclick="location.href='https://support.workaround.tech/login';">
-          <img src="png/phone.png" width="30px" height="30px" class="img-in-card"></a>
+          <img src="svgs/webphone.svg" width="30px" height="30px" class="img-in-card"></img>
           <div class="subholder">
             <div class="defaultTextBox">
               <p class="mainTextBold">Вебфон</p>
@@ -128,7 +138,7 @@
         <div class="divider"></div>
 
         <div class="holder" id="div-link" target="_blank" onclick="location.href='https://touvre.smkt.pro/timesheet';">
-          <img src="png/clock.png" width="30px" height="30px" class="img-in-card"></a>
+          <img src="svgs/TUVR.svg" width="30px" height="30px" class="img-in-card"></img>
           <div class="subholder">
             <div class="defaultTextBox">
               <p class="mainTextBold">ТУВР</p>
@@ -139,15 +149,13 @@
 
         <div class="upd-card">
           <p class="card-title">
-            upd to 2.0/15.09
+            upd to 2.01/16.09
           </p>
-          <a class="card-description" target="_blank" href="https://github.com/jessypink/start-page-smkt#start-page-smkt">
-            full changelog
-          </a>
           <p class="card-description">
-            - some changes for ui/ux stability
+            - icons has been changed <br>
+            - nav bar redesign <br>
+            - Valerochka's очко
           </p>
-
         </div>
 
 
@@ -204,19 +212,19 @@
       <footer class="mastfoot mt-auto" id="foot">
         <div class="footer-nav">
           <div class="div-in-footer">
-            <img src="png/home.png" class="img-in-footer"></a>
+            <img src="svgs/home.svg" class="img-in-footer"></a>
             <p>
-              Лента
+              Дом
             </p>
           </div>
           <div class="div-in-footer">
-            <img src="png/star.png" class="img-in-footer"></a>
+            <img src="svgs/star.svg" class="img-in-footer"></a>
             <p>
               Избранное
             </p>
           </div>
           <div class="div-in-footer">
-            <img src="png/menu.png" class="img-in-footer"></a>
+            <img src="svgs/menu.svg" class="img-in-footer"></a>
             <p>
               Меню
             </p>
