--- a/index.html
+++ b/index.html
@@ -212,19 +212,23 @@
       <footer class="mastfoot mt-auto" id="foot">
         <div class="footer-nav">
           <div class="div-in-footer">
-            <img src="svgs/home.svg" class="img-in-footer"></a>
+            <div id="selected-zaglushka">
+              <img src="svgs/home.svg" class="img-in-footer" ></img>
+            </div>
             <p>
               Дом
             </p>
           </div>
           <div class="div-in-footer">
-            <img src="svgs/star.svg" class="img-in-footer"></a>
+            <img src="svgs/star.svg" class="img-in-footer"></img>
             <p>
               Избранное
             </p>
           </div>
           <div class="div-in-footer">
-            <img src="svgs/menu.svg" class="img-in-footer"></a>
+            <div id="selected-zaglushka1">
+              <img src="svgs/menu.svg" class="img-in-footer"></img>
+            </div>
             <p>
               Меню
             </p>
